--- a/src/app/_components/home/home.component.scss
+++ b/src/app/_components/home/home.component.scss
@@ -1,7 +1,7 @@
 main {
-  background: url("/assets/img/home-bg.jpg") no-repeat center center;
-  background-size: cover;
-  padding-top: 10px;
+  //background: url("/assets/img/home-bg.jpg") no-repeat center center;
+  //background-size: cover;
+  padding: 15px 0;
 
   app-card {
     width: 95%;
