--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
       <a mat-list-item [routerLink]="'recette'" (click)="drawer.toggle()"> Recettes </a>
       <a mat-list-item [routerLink]="'couture'" (click)="drawer.toggle()"> Coutures </a>
       <a mat-list-item [routerLink]="'betise'" (click)="drawer.toggle()"> Bêtises </a>
+      <a mat-list-item [routerLink]="'galerie'" (click)="drawer.toggle()"> Galerie </a>
     </mat-nav-list>
 
 
