--- a/src/app/_components/home/card/card.component.html
+++ b/src/app/_components/home/card/card.component.html
@@ -1,11 +1,7 @@
-<mat-card class="example-card">
+<mat-card class="example-card" [routerLink]="cardInfo.link">
   <mat-card-header>
     <mat-card-title>{{cardInfo.title}}</mat-card-title>
     <mat-card-subtitle>{{cardInfo.description}}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image [src]="cardInfo.img" alt="Photo pour catégorie {{cardInfo.title}}">
-
-  <mat-card-actions>
-    <button mat-button [routerLink]="cardInfo.link">Plus</button>
-  </mat-card-actions>
 </mat-card>
