now can upload multiple images in galerie

--- a/src/app/_components/galerie/galerie.component.html
+++ b/src/app/_components/galerie/galerie.component.html
@@ -10,4 +10,4 @@
   <mat-icon>add</mat-icon>
 </button>
 
-<input type="file" class="hidden" accept="image/*" id="fileInput" ngModel (ngModelChange)="modelChange()" />
+<input type="file" class="hidden" multiple accept="image/*" id="fileInput" ngModel (ngModelChange)="modelChange()" />
