--- a/src/app/_components/galerie/galerie.component.html
+++ b/src/app/_components/galerie/galerie.component.html
@@ -1,7 +1,8 @@
 <main>
   <ngx-masonry [options]="masonryOptions">
     <div ngxMasonryItem *ngFor="let picture of masonryItems" (click)="openImage(picture)">
-      <img [src]="picture.url" width="100%">
+      <img *ngIf="!picture.url.includes('.mp4')" [src]="picture.url" width="100%">
+      <video *ngIf="picture.url.includes('.mp4')" [src]="picture.url" width="100%"></video>
     </div>
   </ngx-masonry>
 </main>
@@ -10,4 +11,4 @@
   <mat-icon>add</mat-icon>
 </button>
 
-<input type="file" class="hidden" multiple accept="image/*" id="fileInput" ngModel (ngModelChange)="modelChange()" />
+<input type="file" class="hidden" multiple accept="image/*, video/*" id="fileInput" ngModel (ngModelChange)="modelChange()" />
