--- a/src/app/_components/data-list/data-list.component.html
+++ b/src/app/_components/data-list/data-list.component.html
@@ -2,7 +2,8 @@
   <mat-list>
     <div mat-subheader>{{nameMapping[collection]}}</div>
     <mat-list-item *ngFor="let item of dataList">
-      <mat-icon mat-list-icon [routerLink]="'/' + collection +'/details/' + item.id">face</mat-icon>
+      <mat-icon *ngIf="collection !== 'couture'" mat-list-icon [routerLink]="'/' + collection +'/details/' + item.id">face</mat-icon>
+      <img *ngIf="collection === 'couture'" [src]="item.img_url" mat-list-icon/>
       <div mat-line [routerLink]="'/' + collection +'/details/' + item.id">{{item.title}}</div>
       <div mat-line [routerLink]="'/' + collection +'/details/' + item.id"> Par {{item.author}} </div>
       <button mat-icon-button [routerLink]="'/' + collection + '/form/' + item.id" *ngIf="item.author === email">
