--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar>
-  <button mat-icon-button (click)="drawer.toggle()">
+  <button mat-icon-button (click)="drawer.toggle()" *ngIf="isMobile">
     <mat-icon>menu</mat-icon>
   </button>
   Bépédia
 </mat-toolbar>
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 <mat-drawer-container class="example-container">
-  <mat-drawer mode="over" #drawer>
+  <mat-drawer [mode]="isMobile ? 'over' : 'side'" #drawer [opened]="!isMobile">
 
     <div class="full-width sub-drawer" fxLayoutAlign="center center" *ngIf="!user">
       <button mat-button>Se connecter</button>
@@ -20,10 +20,10 @@
     <mat-divider class="full-width"></mat-divider>
 
     <mat-nav-list>
-      <a mat-list-item [routerLink]="'recette'" (click)="drawer.toggle()"> Recettes </a>
-      <a mat-list-item [routerLink]="'couture'" (click)="drawer.toggle()"> Coutures </a>
-      <a mat-list-item [routerLink]="'betise'" (click)="drawer.toggle()"> Bêtises </a>
-      <a mat-list-item [routerLink]="'galerie'" (click)="drawer.toggle()"> Galerie </a>
+      <a mat-list-item [routerLink]="'recette'" (click)="isMobile ? drawer.toggle() : null"> Recettes </a>
+      <a mat-list-item [routerLink]="'couture'" (click)="isMobile ? drawer.toggle() : null"> Coutures </a>
+      <a mat-list-item [routerLink]="'betise'" (click)="isMobile ? drawer.toggle() : null"> Bêtises </a>
+      <a mat-list-item [routerLink]="'galerie'" (click)="isMobile ? drawer.toggle() : null"> Galerie </a>
     </mat-nav-list>
 
 
