added nendoroids collections

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
       <a mat-list-item [routerLink]="'couture'" (click)="isMobile ? drawer.toggle() : null"> Coutures </a>
       <a mat-list-item [routerLink]="'betise'" (click)="isMobile ? drawer.toggle() : null"> Bêtises </a>
       <a mat-list-item [routerLink]="'galerie'" (click)="isMobile ? drawer.toggle() : null"> Galerie </a>
+      <a mat-list-item [routerLink]="'nendoroids'" (click)="isMobile ? drawer.toggle() : null"> Nendoroids </a>
     </mat-nav-list>
 
 
