--- a/src/app/_components/nendoroids-home/nendoroids/nendoroids.component.scss
+++ b/src/app/_components/nendoroids-home/nendoroids/nendoroids.component.scss
@@ -13,6 +13,18 @@ mat-form-field {
   }
 }
 
+.list-container {
+
+  button {
+    margin: 0 5px;
+  }
+
+  .name-row {
+    width: 90%;
+  }
+}
+
 .charge-more-container {
   text-align: center;
+  padding: 20px;
 }
